# ode_kahan

./: CMakeLists.txt  ODE_KAHAN_data - AMPERE_Runtime_all_operations.csv  ODE_KAHAN_data - TURING_Runtime_all_operations.csv  ODE_KAHAN_data - precision.csv  acc_col.c  acc_col_kahan.c  acc_row.c  acc_row_kahan.c  cuda_col.cu  cuda_col_Kahan.cu  cuda_row.cu  cuda_row_kahan.cu  dmitruk_ode_prec - CUDA.csv  dmitruk_ode_prec - OpenACC.csv  dmitruk_ode_prec - Sequential.csv  dmitruk_ode_runtime - Ampere_SYCL.csv  dmitruk_ode_runtime - Ampere_all.csv  dmitruk_ode_runtime - SYCL_CPU.csv  dmitruk_ode_runtime - Turing_CUDA.csv  dmitruk_ode_runtime - Turing_OpenACC_CPU.csv  dmitruk_ode_runtime - Turing_OpenACC_GPU.csv  dmitruk_ode_runtime - sequential.csv  example1_double_acc_col.c  example1_double_acc_col_kahan.c  example1_double_acc_col_neumaier.c  example1_double_acc_row.c  example1_double_acc_row_kahan.c  example1_double_acc_row_neumaier.c  example1_double_cuda_col.cu  example1_double_cuda_col.dp.cpp  example1_double_cuda_col_kahan.cu  example1_double_cuda_col_kahan.dp.cpp  example1_double_cuda_col_neumaier.cu  example1_double_cuda_col_neumaier.dp.cpp  example1_double_cuda_row.cu  example1_double_cuda_row.dp.cpp  example1_double_cuda_row_kahan.cu  example1_double_cuda_row_kahan.dp.cpp  example1_double_seq.c  example1_double_seq_kahan.c  (+69 more)
